Modify width of portfolio card components and ensure consistent alignment and spacing

--- a/src/style.css
+++ b/src/style.css
@@ -76,7 +76,8 @@ p {
 
 .project-preview {
     height: 30vh;
-    width: auto;
+    width: 66%;
+    object-fit: contain;
 }
 
 #title-link {
@@ -100,7 +101,6 @@ p {
     height: 40vh;
     width: 50%;
     display: flex;
-    justify-content: center;
     align-items: center;
 }
 
@@ -116,7 +116,7 @@ p {
     justify-content: center;
     align-items: center;
     text-align: center;
-    width: 50%;
+    width: 100%;
 }
 
 .project-info {
